budget-app/src/components/Modal.css
.modal-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5);
  display: grid;
  place-items: center;
  transition: all 0.3s linear;
  visibility: hidden;
  z-index: -1;
}

.show-modal {
  visibility: visible;
  z-index: 10;
}
.modal-container {
  background: #fff;
  border-radius: 0.25rem;
  width: 90vw;
  height: 40vh;
  max-width: 620px;
  position: relative;
}

.form-remove {
  position: absolute;
  margin: 0.5rem;
  top: 30%;
  text-align: center;
}

.close-modal-btn {
  position: absolute;
  top: 1rem;
  right: 1rem;
  font-size: 2rem;
  background: transparent;
  border-color: transparent;
  color: hsl(360, 67%, 44%);
  cursor: pointer;
}

.form-control {
  display: flex;
  flex-direction: column;
  margin: 3.5rem 2rem;
}

.input-style {
  padding: 0.25rem;
  margin-bottom: 1rem;
  background: hsl(210, 36%, 96%);
  border-top-left-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
  border-color: transparent;
  font-size: 1rem;
  flex: 1 0 auto;
  color: hsl(210, 22%, 49%);
}

.modal-btn {
  background: hsl(205, 86%, 81%);
  border-color: transparent;
  content: hsl(205, 78%, 60%);
  color: #fff;
  transition: none;
}

.error-message {
  display: none;
  color: red;
}

.show-error {
  display: block;
}

.modal-btn:hover {
  background: hsl(205, 78%, 60%);
}

@media screen and (min-width: 375px) {
  .modal-container {
    height: 30vh;
  }

  .form-remove {
    position: fixed;
    margin: 0;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
}

